# DataLake

./: .flake8  .gitignore  README.md  architecture.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: athena-queries.sql  test-messages.json
scripts/: send-test-message.py
src/lambda/: processor.py
terraform/: .terraform.lock.hcl  athena.tf  lambda.tf  main.tf  outputs.tf  s3.tf  sns.tf  sqs.tf  variables.tf
terraform/modules/alerting/: main.tf
terraform/modules/analytics/: main.tf
terraform/modules/ingestion/: main.tf
terraform/modules/storage/: main.tf
tests/: conftest.py  test_processor.py
