[project]
name = "security-data-lake"
version = "1.0.0"
description = "Serverless security data lake pipeline on AWS"
requires-python = ">=3.14"

dependencies = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "moto[s3,sqs,sns]>=5.1.22",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "awswrangler>=3.5.0",
    "pandas>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "moto[s3,sqs,sns]>=5.1.22",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "awswrangler>=3.5.0",
    "pandas>=2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", ".terraform", "venv", ".venv"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
